added movement to player

--- a/juego.html
+++ b/juego.html
@@ -12,8 +12,10 @@
     <canvas id="fantavision-canvas" width="900" height="600" style="border: 1px solid black;"></canvas>
 </div>
 <script src="player.js"></script>
+<script src="obstacle.js"></script>
 <script src="game.js"></script>
 <script src="main.js"></script>
+
 
 </body>
 </html>
