--- a/juego.html
+++ b/juego.html
@@ -11,6 +11,7 @@
     <div>
     <canvas id="fantavision-canvas" width="900" height="600" style="border: 1px solid black;"></canvas>
 </div>
+<script src="assets.js"></script>
 <script src="player.js"></script>
 <script src="obstacle.js"></script>
 <script src="game.js"></script>
